--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         }
         .film-row {
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
             align-items: center;
             padding: 10px;
             border-bottom: 1px solid #FFA500;
             background: #222;
             color: #FFA500;
+            margin-bottom: 10px;
         }
         .completed {
             background: #444;
@@ -54,6 +56,7 @@
             padding: 5px 10px;
             cursor: pointer;
             border-radius: 5px;
+            margin-top: 5px;
         }
         button:hover {
             background: #ff7800;
@@ -92,6 +95,31 @@
         .modal button {
             background: #ff7800;
             color: #fff;
+        }
+
+        /* Style dla checkboxów */
+        .film-row input[type="checkbox"] {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            border: 2px solid #FFA500;
+            border-radius: 5px;
+            background-color: #222;
+            position: relative;
+            cursor: pointer;
+        }
+        .film-row input[type="checkbox"]:checked {
+            background-color: #FFA500;
+        }
+        .film-row input[type="checkbox"]:checked::before {
+            content: '✔';
+            position: absolute;
+            top: 0;
+            left: 2px;
+            font-size: 16px;
+            color: black;
         }
     </style>
 </head>
