--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 <option value="pov">pov</option>
                 <option value="public">public</option>
             </select>
-            <label for="date">Data i godzina (YYYY-MM-DD HH:MM):</label>
-            <input type="text" id="date" placeholder="Podaj datę i godzinę">
+            <label for="date">Data i godzina (Wybierz datę i godzinę):</label>
+            <input type="datetime-local" id="date" placeholder="Wybierz datę i godzinę">
             <button onclick="addFilmFromModal()">Dodaj</button>
             <button onclick="closeModal()">Anuluj</button>
         </div>
